src/test/ui/error-codes/E0030.stderr
error[E0030]: lower range bound must be less than or equal to upper
  --> $DIR/E0030.rs:14:9
   |
14 |         1000 ... 5 => {}
   |         ^^^^ lower bound larger than upper bound

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0030"
